# qdrant-uploader

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docker/: Dockerfile
requests/: cluster.http  local.http
src/: command_line.rs  main.rs  processors.rs
src/persistence/: mod.rs  vector_field_name.rs
src/persistence/database/: batch_processor.rs  database_client.rs  mod.rs
src/persistence/files_system/: dataset.rs  dataset_ext.rs  file_type.rs  local.rs  mod.rs  s3.rs  s3_dataset.rs
