[package]
name = "qdrant-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chicon = "0.1.4"
log = "0.4.17"
env_logger = "0.10.0"

clap = { version = "4.1.7", features = ["derive", "color", "suggestions", "env", "unicode"] }
tokio = { version = "1", default-features=false, features = ["fs", "macros", "rt", "io-util"] }

serde_json = "1.0.93"
async-trait = "0.1.65"
csv = "1.2.1"
url = "2.3.1"
aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
aws-credential-types = "0.54.1"
bytes = "1.4.0"
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["io"] }
qdrant-client = {version = "1.5.0", features = ["serde"] }
uuid = "1.4.1"
